# fplyx

./: .gitmodules  CMakeLists.txt  README.md
include/: fplyx.h  fplyx_exti.h  fplyx_general.h  fplyx_interpreter.h
include/dev/: stdin.h  stdout.h
include/fplyx_format/: main.h
include/fplyx_type/: extension.h  interpreter.h  libfplyx.h  reference_pos.h  template_interpreter.h  template_vdev.h  vdev.h  vmem.h
include/interp/: all.h  main.h  posix.h  win32.h
include/templ/c/interp/: all.h
include/vmemdrv/: filemem.h  ram.h
src/: CMakeLists.txt  fplyx.c  fplyx_exti.c  fplyx_general.c  fplyx_test.c  fplyx_user.c
src/dev/: CMakeLists.txt  stdin.c  stdout.c
src/interp/: CMakeLists.txt  all.c  main.c  posix.c  win32.c
src/vmemdrv/: CMakeLists.txt  ram.c
